# cpp-mandelbrot-set

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: mondelbort_set.hpp
src/: main.cpp  mondelbort_set.cpp
